# openmetadata-skills

./: .env.example  .gitignore  .npmignore  CONTEXT.md  README.md  package.json  pyproject.toml
.claude/commands/: data-discovery.md
.claude/skills/data-discovery/: SKILL.md
.claude/skills/data-discovery/references/: constraint-schema.md  intent-examples.md
docs/: data-discovery-reference.md
scripts/: discover_data.py
skills/data-discovery/: SKILL.md
skills/data-discovery/references/: entity-types.md
src/data_discovery/: __init__.py  cli.py  client.py  config.py  discovery.py  formatter.py  models.py  router.py  tools.py
tests/: test_client.py  test_discovery.py  test_router.py
